--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "00_reactiontimer",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +16,9 @@
   },
   "homepage": "https://github.com/johntango/ReactionTimer#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2"
-  }
+    "body-parser": "^1.20.3",
+    "express": "^4.21.0"
+  },
+  "keywords": [],
+  "description": ""
 }
